--- a/src/styles/Style.scss
+++ b/src/styles/Style.scss
@@ -2,7 +2,7 @@
 $background-color: cadetblue;
 $help-popout: rgb(27, 207, 162);
 
-html {
+body, html {
 background-color: $background-color;
 font-family: 'Roboto', sans-serif;
 box-shadow: inset 0px 0px 100px 100px rgba(0, 0, 0, 0.5);
