--- a/src/styles/Style.scss
+++ b/src/styles/Style.scss
@@ -8,7 +8,7 @@ font-family: 'Roboto', sans-serif;
 box-shadow: inset 0px 0px 100px 100px rgba(0, 0, 0, 0.5);
 }
 .App {
-display: grid;
+
 place-items: center;
 height: 100%;
 }
@@ -79,11 +79,11 @@ transition: all 0.2s ease-in-out;
 }
 
 .help-popout {
-position: fixed;
+position: relative;
 left: 15%;
 top: 3%;
-width: 250px;
-height: 100%;
+width: 300px;
+height: auto;
 background-color: darken(cadetblue, 15%);
 box-shadow: 2px 2px 10px gray;
 display: none;
@@ -93,17 +93,17 @@ transition: all 0.2s ease-in-out;
     background-color: darken($help-popout, 5%);
 }
 
-.hide 
-{
-display: none;
-}
+// .hide 
+// {
+// display: none;
+// }
 
-.show {
-display: block;
-}
+// .show {
+// display: block;
+// }
 
 .help-button {
-    position: fixed;
+    position: absolute;
     top: 99%;
     left: 70%;
     margin-top: -50px;
