--- a/src/styles/Style.scss
+++ b/src/styles/Style.scss
@@ -8,7 +8,7 @@ font-family: 'Roboto', sans-serif;
 box-shadow: inset 0px 0px 100px 100px rgba(0, 0, 0, 0.5);
 }
 .App {
-
+display: flex;
 place-items: center;
 height: 100%;
 }
