--- a/src/styles/Style.scss
+++ b/src/styles/Style.scss
@@ -5,10 +5,15 @@ $help-popout: rgb(27, 207, 162);
 body, html {
 background-color: $background-color;
 font-family: 'Roboto', sans-serif;
+position: relative;
+transform: translate(-50%, -50%);
+border-radius: 0%;
+width: 100%;
+height: 100%;
 box-shadow: inset 0px 0px 100px 100px rgba(0, 0, 0, 0.5);
 }
 .App {
-display: flex;
+display: grid;
 place-items: center;
 height: 100%;
 }
@@ -79,11 +84,11 @@ transition: all 0.2s ease-in-out;
 }
 
 .help-popout {
-position: relative;
+position: absolute;
 left: 15%;
 top: 3%;
-width: 300px;
-height: auto;
+width: 250px;
+height: 100%;
 background-color: darken(cadetblue, 15%);
 box-shadow: 2px 2px 10px gray;
 display: none;
@@ -93,14 +98,14 @@ transition: all 0.2s ease-in-out;
     background-color: darken($help-popout, 5%);
 }
 
-// .hide 
-// {
-// display: none;
-// }
+.hide 
+{
+display: none;
+}
 
-// .show {
-// display: block;
-// }
+.show {
+display: block;
+}
 
 .help-button {
     position: absolute;
