--- a/src/styles/Style.scss
+++ b/src/styles/Style.scss
@@ -5,7 +5,7 @@ $help-popout: rgb(27, 207, 162);
 body, html {
 background-color: $background-color;
 font-family: 'Roboto', sans-serif;
-position: relative;
+position: fixed;
 transform: translate(-50%, -50%);
 border-radius: 0%;
 width: 100%;
