--- a/src/styles/Style.scss
+++ b/src/styles/Style.scss
@@ -1,134 +1,142 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 $background-color: cadetblue;
 $help-popout: rgb(27, 207, 162);
 
-body, html {
-background-color: $background-color;
-font-family: 'Roboto', sans-serif;
-position: fixed;
-transform: translate(-50%, -50%);
-border-radius: 0%;
-width: 100%;
-height: 100%;
-box-shadow: inset 0px 0px 100px 100px rgba(0, 0, 0, 0.5);
+html {
+  background-color: $background-color;
+  font-family: 'Roboto', sans-serif;
+  height: 100%;
+  margin: 0;
+  box-sizing: border-box;
+  
 }
+
+body {
+  margin: 0;
+  height: 100%;
+  
+}
+
 .App {
-display: grid;
-place-items: center;
-height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
 
 .Hangman {
-color: black;
-text-align: center;
-zoom: 1.5;
+  color: black;
+  text-align: center;
+  zoom: 1.5;
 }
 
 .Hangman img {
-height: 150px;
+  height: 150px;
 }
 
 .Hangman h2 {
-font-size: 1.50rem;
-font-weight: 400;
+  font-size: 1.50rem;
+  font-weight: 400;
 }
 
 .Hangman-word {
-letter-spacing: 1em;
-margin: 0.4em -1em 0.2em 0;
-font-size: 2rem;
+  letter-spacing: 1em;
+  margin: 0.4em -1em 0.2em 0;
+  font-size: 2rem;
 }
 
 .Hangman-buttons {
-text-align: center;
-display: inline-block;
-width: 320px;
-margin-top: 0;
+  text-align: center;
+  display: inline-block;
+  width: 320px;
+  margin-top: 0;
 }
+
 .Hangman button {
-border: none;
-font-family: inherit;
-font-size: 1rem;
-cursor: pointer;
-width: 30px;
-margin: 5px 2px 2px 2px;
-letter-spacing: 1px;
-outline: none;
-background: #00d494;
-color: rgb(10, 0, 0);
-box-shadow: 0 4px rosybrown;
-padding-top: 4px;
+  border: none;
+  font-family: inherit;
+  font-size: 1rem;
+  cursor: pointer;
+  width: 30px;
+  margin: 5px 2px 2px 2px;
+  letter-spacing: 1px;
+  outline: none;
+  background: #00d494;
+  color: rgb(10, 0, 0);
+  box-shadow: 0 4px rosybrown;
+  padding-top: 4px;
 }
 
 .Hangman button:hover {
-background-color: #018b9b;
+  background-color: #018b9b;
 }
 
 .Hangman button:disabled {
-background: #bdbdbd;
-color: #eeeeee;
-box-shadow: 0 6px #9e9e9e;
+  background: #bdbdbd;
+  color: #eeeeee;
+  box-shadow: 0 6px #9e9e9e;
 }
+
 #reset {
-width: auto;
-display: block;
-margin-left: auto;
-margin-right: auto;
-background: #2cb027;
-box-shadow: 0 6px #23a21f;
-transition: all 0.2s ease-in-out;
+  width: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  background: #2cb027;
+  box-shadow: 0 6px #23a21f;
+  transition: all 0.2s ease-in-out;
 }
+
 #reset:hover {
-background: #1bdb2b;
-transition: all 0.2s ease-in-out;
+  background: #1bdb2b;
+  transition: all 0.2s ease-in-out;
 }
 
 .help-popout {
-position: absolute;
-left: 15%;
-top: 3%;
-width: 250px;
-height: 100%;
-background-color: darken(cadetblue, 15%);
-box-shadow: 2px 2px 10px gray;
-display: none;
-transition: all 0.2s ease-in-out;
-}
-.help-popout:hover {
-    background-color: darken($help-popout, 5%);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 80%;
+  width: 3000px;
+  height: auto;
+  background-color: darken(cadetblue, 15%);
+  box-shadow: 2px 2px 10px gray;
+  display: none;
+  transition: all 0.2s ease-in-out;
 }
 
-.hide 
-{
-display: none;
+.help-popout:hover {
+  background-color: darken($help-popout, 5%);
+}
+
+.hide {
+  display: none;
 }
 
 .show {
-display: block;
+  display: block;
 }
 
 .help-button {
-    position: absolute;
-    top: 99%;
-    left: 70%;
-    margin-top: -50px;
-    height: 5%;
-    font-size: 1.2em; 
-    padding: 8px 10px; 
-    border: 1px solid black; 
-    background-color: #00d494; 
-    color: black; 
-    transition: all 0.2s ease-in-out;
+  display: flex;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  font-size: 1.2em;
+  padding: 8px 10px;
+  border: 1px solid black;
+  background-color: #00d494;
+  color: black;
+  transition: all 0.2s ease-in-out;
 }
 
 .help-button:hover {
-    background-color: #018b9b; 
-    color: black;
-    cursor: pointer;
-  }
+  background-color: #018b9b;
+  color: black;
+  cursor: pointer;
+}
 
-  @media (max-width: 700px) {
-    .header-title {
-      font-size: 50px; /* Reduce font size for smaller screens */
-    }
-  }
+
