--- a/src/styles/Style.scss
+++ b/src/styles/Style.scss
@@ -7,15 +7,12 @@ html {
   background-color: $background-color;
   font-family: 'Roboto', sans-serif;
   height: 100%;
-  margin: 0;
-  box-sizing: border-box;
-  
+  margin: auto;
 }
 
 body {
   margin: 0;
   height: 100%;
-  
 }
 
 .App {
